- Added more search pattern and source code parsing to the
  getter analysis.
- Added a metatag to both skins to prevent crawler from indexing
  a kreXX output. Remember kids: never debug a productive site.
  This will only lead to trouble.
- Added a Registry class, so the overwrites can actually access
  additional data from the outside.
- The log chunk and config folder are now configurable.
- Bugfix: Removed a warning in the IP-Whitelisting, in case there
  is no actual IP available.
- Bugfix: Source generation for resolved recursions works now as
  expected.
- Change: Moved code generation to it's own namespace.
- Change: Output -> File will now save the logfile directly after
  the analysis.
- Change: Renamed the Output -> Frontend configuration to
  Output -> shutdown.
- Change: Splitted the ActionController to several sub classes.
- Change: The help texts are now in a separate file.


2.1.1
- Added the info, if a property / method is inherited.
- Added a configuration for the scope analysis.
- Added the search option "Search whole value".
- Added the additional info from Smoky-Grey to the Hans, which
  will be displayed inside the help-box on hover.
- Bugfix: The comments will not break out of the getter analysis
  json anymore
- Bugfix: Removed a warning in case kreXX was called from eval'd
  code.
- Bugfix: Dumping of inherited private properties works now.
- Bugfix: Inherited properties and methods are now regarded by the
  scope analysis.
- Bugfix: Blacklisted all reflection classes for configured debug
  methods.
- Bugfix: Getter analysis is now respecting the scope analysis
  result.
- Bugfix: Removed the type-spam in the additional data.
- Change: Reworked some of the configurations (disable, maxRuntime,
  memoryLeft, iprange)
- Change: Refactored what did not make it into v2.0.0 due to time
  constraints and introduced a factory.


2.1.0
- Added getter method analysis for models.
- Added search options to both skins.